# icns-to-ico

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build-exe.bat  build.bat  build.rs  convert.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  user-support.yml
.github/workflows/: release.yml
resources/: app.manifest  app.rc
src/: app.rs  converter.rs  filesystem.rs  main.rs  ui.rs
